更新條款內容
1.新增選取專案和產品的按鈕與畫面

--- a/CRM/terms.html
+++ b/CRM/terms.html
@@ -399,6 +399,8 @@
             <div class="top-title">
                 <h4><span>條款</span></h4>
             </div>
+            
+            <div class="fillin-box">
             <div class="terms-info">
                 <div class="terms-field">
                     <p class="terms-title">第三方工具之服務</p>
@@ -407,8 +409,57 @@
                         提供連結的外部網站，holkee 不保證其內容之合適性、即時性、有效性及正確性。商家或消費者連結至 holkee
                         提供連結的網站時，應自行決定是否離開；若商家或消費者連結至第三方網站而產生之任何損害，holkee 不負任何損害賠償之連帶責任。<br><br>
                         於使用第三方工具前，holkee 建議商家或消費者事先充分瞭解第三方工具之所有細節。<br>
-                        商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。</p>
+                        商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。
+                    </p>
                 </div>
+            </div>    
+                <form>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>產品</p>
+                        </div>
+                        <div class="fillin-info">
+                            <ul class="list-project-single clearfix">
+                                <li>
+                                    <p>威旭炫光短影音-直+橫 1組</p>
+                                </li>
+                                <li>
+                                    <p>業配口碑行銷 3篇/月</p>
+                                </li>
+                                <li>
+                                    <p> 200面</p>
+                                </li>
+                                <li>
+                                    <p>威旭炫光短影音-直+橫 1組</p>
+                                </li>
+                                <li>
+                                    <p>業配口碑行銷 3篇/月</p>
+                                </li>
+                                <li>
+                                    <p> 200面</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>專案</p>
+                        </div>
+                        <div class="fillin-info">
+                            <ul class="list-project-single clearfix">
+                                <li>
+                                    <p>1607_4G專案</p>
+                                </li>
+                                <li>
+                                    <p>1612_金多利專案</p>
+                                </li>
+                                <li>
+                                    <p>1702_Google 16專案</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="bottom-btn-tool">
                 <fieldset class="field">
@@ -465,7 +516,7 @@
         </div>
     </section>
     <!-- popup 新增條款-->
-    <section id="popup-add-terms-new" class="popup-bg-white white-popup mfp-hide">
+    <section id="popup-add-terms-new" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="top-title">
                 <h4><span>新增條款</span></h4>
@@ -473,12 +524,44 @@
             <div class="fillin-box">
                 <form>
                     <div class="field clearfix">
-                        <div class="fillin-info">
+                        <div class="fillin-info width-100">
                             <fieldset class="clearfix">
-                                <input class="width-100 default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。" value="">
+                                <input class=" default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。" value="">
                             </fieldset>
                             <fieldset>
-                                <textarea class="width-100" placeholder="請輸入條款內容"></textarea>
+                                <textarea placeholder="請輸入條款內容"></textarea>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>產品</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">產品選項</label>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-products">
+                                        <i class="fas fa-plus"></i>
+                                        <span>選擇產品</span>
+                                    </a>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>專案</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">促銷專案</label>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-projects">
+                                        <i class="fas fa-plus"></i>
+                                        <span>選擇專案</span>
+                                    </a>
+                                </div>
                             </fieldset>
                         </div>
                     </div>
@@ -492,7 +575,7 @@
         </div>
     </section>
     <!-- popup 編輯條款-->
-    <section id="popup-edit-terms" class="popup-bg-white white-popup mfp-hide">
+    <section id="popup-edit-terms" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="top-title">
                 <h4><span>編輯條款</span></h4>
@@ -500,13 +583,13 @@
             <div class="fillin-box">
                 <form>
                     <div class="field clearfix">
-                        <div class="fillin-info">
+                        <div class="fillin-info width-100">
                             <fieldset class="clearfix">
-                                <input class="width-100 default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。"
+                                <input class="default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。"
                                     value="第三方工具之服務">
                             </fieldset>
                             <fieldset>
-                                <textarea class="width-100" placeholder="請輸入條款內容">
+                                <textarea placeholder="請輸入條款內容">
 使用第三方工具之服務時，請確保商家對其熟悉度，並同意其使用條款；holkee 無法監視或控制由第三方產生之結果。
 為增加商家或消費者方便性，holkee 提供連結至第三方工具之服務；此服務提供不表示 holkee 認可第三方之服務內容，或與第三方有任何關係。
 holkee 提供連結的外部網站，holkee 不保證其內容之合適性、即時性、有效性及正確性。
@@ -517,17 +600,84 @@ holkee 提供連結的外部網站，holkee 不保證其內容之合適性、即
                             </fieldset>
                         </div>
                     </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>產品</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">產品選項</label>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-products">
+                                        <i class="fas fa-plus"></i>
+                                        <span>選擇產品</span>
+                                    </a>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <ul class="list-project-single clearfix">
+                            <li>
+                                <p>產品名稱產品名稱產品名稱</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>產品名稱產品名稱產品名稱</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>1702_Google 產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>專案</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">促銷專案</label>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-projects">
+                                        <i class="fas fa-plus"></i>
+                                        <span>選擇專案</span>
+                                    </a>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <ul class="list-project-single clearfix">
+                            <li>
+                                <p>1607_4G專案</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>1612_金多利專案</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>1702_Google 16專案</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </form>
             </div>
             <div class="bottom-btn-tool">
                 <fieldset class="field">
-                    <input class="btn--primary-xl " type="submit" value="建立">
+                    <input class="btn--primary-xl " type="submit" value="儲存">
+                    <ul class="edit-tool">
+                        <li>
+                            <a class="delete popup-link" href="#popup-delete">
+                                <i class="far fa-trash-alt" title="下架"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </fieldset>
             </div>
         </div>
     </section>
     <!-- popup 複製條款-->
-    <section id="popup-copy-terms" class="popup-bg-white white-popup mfp-hide">
+    <section id="popup-copy-terms" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="top-title">
                 <h4><span>新增條款</span></h4>
@@ -535,22 +685,80 @@ holkee 提供連結的外部網站，holkee 不保證其內容之合適性、即
             <div class="fillin-box">
                 <form>
                     <div class="field clearfix">
-                        <div class="fillin-info">
+                        <div class="fillin-info width-100">
                             <fieldset class="clearfix">
-                                <input class="width-100 default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。"
-                                    value="第三方工具之服務">
+                                <input class="default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。" value="第三方工具之服務">
                             </fieldset>
                             <fieldset>
-                                <textarea class="width-100" placeholder="請輸入條款內容">
+                                <textarea placeholder="請輸入條款內容">
 使用第三方工具之服務時，請確保商家對其熟悉度，並同意其使用條款；holkee 無法監視或控制由第三方產生之結果。
 為增加商家或消費者方便性，holkee 提供連結至第三方工具之服務；此服務提供不表示 holkee 認可第三方之服務內容，或與第三方有任何關係。
 holkee 提供連結的外部網站，holkee 不保證其內容之合適性、即時性、有效性及正確性。
 商家或消費者連結至 holkee 提供連結的網站時，應自行決定是否離開；若商家或消費者連結至第三方網站而產生之任何損害，holkee 不負任何損害賠償之連帶責任。
 於使用第三方工具前，holkee 建議商家或消費者事先充分瞭解第三方工具之所有細節。
-商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。
-                                    </textarea>
+商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。</textarea>
                             </fieldset>
                         </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>產品</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">產品選項</label>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-products">
+                                        <i class="fas fa-plus"></i>
+                                        <span>選擇產品</span>
+                                    </a>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <ul class="list-project-single clearfix">
+                            <li>
+                                <p>產品名稱產品名稱產品名稱</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>產品名稱產品名稱產品名稱</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>1702_Google 產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>專案</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">促銷專案</label>
+                                <div class="confirm">
+                                    <a class="btn-add btn--primary-s popup-link" href="#popup-add-projects">
+                                        <i class="fas fa-plus"></i>
+                                        <span>選擇專案</span>
+                                    </a>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <ul class="list-project-single clearfix">
+                            <li>
+                                <p>1607_4G專案</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>1612_金多利專案</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                            <li>
+                                <p>1702_Google 16專案</p>
+                                <a class="delete"><i class="fas fa-times"></i></a>
+                            </li>
+                        </ul>
                     </div>
                 </form>
             </div>
