菜單目錄功能調整
1.調整選擇店家的樣式
2.拆開套件popup相關等js

--- a/quickclick/add_new_menu.html
+++ b/quickclick/add_new_menu.html
@@ -3,21 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>菜單管理</title>
+    <title>popup 新增菜單:預設建出來的第一個菜單 就是~快一點</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            $(".middle-content .more-features").click(function () {
-                $(this).next(".features-menu").fadeToggle(0);
-                return false;
-            });
-        });
-    </script>
 </head>
 <body>
+    <div class="mfp-bg"></div>
+    <div class="mfp-wrap">
+        <div class="mfp-container">
+            <div class="mfp-content">
+                <!-- popup 新增菜單:預設建出來的第一個菜單 就是~快一點 -->
+                <section id="popup-add-menu" class="white-popup popup-width-m">
+                    <div class="popup-container">
+                        <div class="top-title">
+                            <h4><span>請選擇新建或匯入</span></h4>
+                        </div>
+                        <ul class="choose-method">
+                            <li>
+                                <a href="#">
+                                    <p class="menu">新建一個菜單</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p class="upload">請選擇上傳檔案或拖曳檔案至此</p>
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="text-remind">
+                            <a class="download-template" href="#">下載匯入範本</a>
+                            <a class="icon-faq"><i class="fas fa-question-circle"></i></a>
+                        </p>
+                    </div>
+                    <button title="Close (Esc)" type="button" class="mfp-close">×</button>
+                </section>
+            </div>
+        </div>
+    </div>
     <main class="main-container">
         <section class="top-content clearfix">
             <h3 class="main-title">菜單管理</h3>
@@ -31,7 +55,7 @@
         <section class="middle-content">
             <div class="menu-list">
                 <div class="add-new-card">
-                    <a class="popup-link" href="add_new_menu.html">
+                    <a class="popup-link" href="#popup-add-menu">
                         <p>新增或匯入菜單</p>
                     </a>
                 </div>
@@ -57,25 +81,25 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="popup-delete-menu.html">
+                                <a class="popup-link" href="#popup-delete-menu">
                                     <span><i class="far fa-trash-alt"></i></span>
                                     刪除
                                 </a>
                             </li>
                             <li>
-                                <a href="menu-history.html">
+                                <a href="#">
                                     <span><i class="fas fa-history"></i></span>
                                     歷史紀錄
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="popup-choose-store.html"">
+                                <a class="popup-link" href="#popup-choose-store">
                                     <span><i class="fas fa-share-square"></i></span>
                                     將此菜單複製到其他店
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="popup-choose-platform.html"">
+                                <a class="popup-link" href="#popup-choose-platform">
                                     <span><i class="fas fa-share-square"></i></span>將此菜單上架到其他平台
                                 </a>
                             </li>
