--- a/quickclick/popup-choose-store.html
+++ b/quickclick/popup-choose-store.html
@@ -3,21 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>菜單管理</title>
+    <title>popup 將此菜單複製到其他店：請選擇複製此菜單的店家</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            $(".middle-content .more-features").click(function () {
-                $(this).next(".features-menu").fadeToggle(0);
-                return false;
-            });
-        });
-    </script>
 </head>
 <body>
+    <div class="mfp-bg"></div>
+    <div class="mfp-wrap">
+        <div class="mfp-container">
+            <div class="mfp-content">
+                <!-- popup 將此菜單複製到其他店：請選擇複製此菜單的店家 -->
+                <section id="popup-choose-store" class="white-popup mfp-hide popup-width-m">
+                    <div class="popup-container">
+                        <div class="top-title">
+                            <h4><span>請選擇複製此菜單的店家</span></h4>
+                        </div>
+                        <div class="choose-store-list">
+                            <div class="tools-bar">
+                                <div class="search-box">
+                                    <input class="default" type="text" placeholder="搜尋商店ID或商店名稱">
+                                </div>
+                            </div>
+                            <div class="field-title field">
+                                <div class="option-list">
+                                </div>
+                                <div class="store-id">
+                                    <p>商店ID</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>商店名稱</p>
+                                </div>
+                            </div>
+                            <!-- 有勾選 + selected ：底色變白色 -->
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>153</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>MADAM ROSE玫瑰夫人</p>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="">
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>153</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>羊毛與花 ‧ 光點 youmoutoohana Coffee</p>
+                                </div>
+                            </div>
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>1256</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>May姐健康廚房料理</p>
+                                </div>
+                            </div>
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>125</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>大葉髙島屋Dayeh-Takashimaya</p>
+                                </div>
+                            </div>
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>1588</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>饕之鄉李姐的店</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pages clearfix">
+                            <p>1-50列(共220列 )</p>
+                            <ul class="page-nb">
+                                <li>
+                                    <a class="none">上一頁</a>
+                                </li>
+                                <li>
+                                    <a class="selected">1</a>
+                                </li>
+                                <li>
+                                    <a href="#">2</a>
+                                </li>
+                                <li>
+                                    ...
+                                </li>
+                                <li>
+                                    <a href="#">8</a>
+                                </li>
+                                <li>
+                                    <a href="#">9</a>
+                                </li>
+                                <li>
+                                    <a href="#">下一頁</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="bottom-btn-tool">
+                            <input class="btn--primary-xl " type="submit" value="發布">
+                        </div>
+                    </div>
+                    <button title="Close (Esc)" type="button" class="mfp-close">×</button>
+                </section>
+            </div>
+        </div>
+    </div>
     <main class="main-container">
         <section class="top-content clearfix">
             <h3 class="main-title">菜單管理</h3>
@@ -31,7 +146,7 @@
         <section class="middle-content">
             <div class="menu-list">
                 <div class="add-new-card">
-                    <a class="popup-link" href="add_new_menu.html">
+                    <a class="popup-link" href="#popup-add-menu">
                         <p>新增或匯入菜單</p>
                     </a>
                 </div>
@@ -57,25 +172,25 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="popup-delete-menu.html">
+                                <a class="popup-link" href="#popup-delete-menu">
                                     <span><i class="far fa-trash-alt"></i></span>
                                     刪除
                                 </a>
                             </li>
                             <li>
-                                <a href="menu-history.html">
+                                <a href="#">
                                     <span><i class="fas fa-history"></i></span>
                                     歷史紀錄
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="popup-choose-store.html"">
+                                <a class="popup-link" href="#popup-choose-store">
                                     <span><i class="fas fa-share-square"></i></span>
                                     將此菜單複製到其他店
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="popup-choose-platform.html"">
+                                <a class="popup-link" href="#popup-choose-platform">
                                     <span><i class="fas fa-share-square"></i></span>將此菜單上架到其他平台
                                 </a>
                             </li>
