popuup-複製到他店~調整為10筆顯示
外框 mfp-wrap 新增 style="overflow-y: auto;"

--- a/quickclick/popup-choose-store.html
+++ b/quickclick/popup-choose-store.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="mfp-bg"></div>
-    <div class="mfp-wrap">
+    <div class="mfp-wrap" style="overflow-y: auto;">
         <div class="mfp-container">
             <div class="mfp-content">
                 <!-- popup 將此菜單複製到其他店：請選擇複製此菜單的店家 -->
@@ -97,6 +97,78 @@
                                     <p>饕之鄉李姐的店</p>
                                 </div>
                             </div>
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>1256</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>May姐健康廚房料理</p>
+                                </div>
+                            </div>
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>125</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>大葉髙島屋Dayeh-Takashimaya</p>
+                                </div>
+                            </div>
+                            <div class="field selected">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="" checked>
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>1588</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>饕之鄉李姐的店</p>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="">
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>1256</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>May姐健康廚房料理</p>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="">
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>125</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>大葉髙島屋Dayeh-Takashimaya</p>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="option-list">
+                                    <input id="" type="checkbox" name="" value="">
+                                    <label for="option">勾選</label>
+                                </div>
+                                <div class="store-id">
+                                    <p>1588</p>
+                                </div>
+                                <div class="store-name">
+                                    <p>饕之鄉李姐的店</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="pages clearfix">
                             <p>1-50列(共220列 )</p>
@@ -125,7 +197,7 @@
                             </ul>
                         </div>
                         <div class="bottom-btn-tool">
-                            <input class="btn--primary-xl " type="submit" value="發布">
+                            <input class="btn--primary-xl " type="submit" value="複製">
                         </div>
                     </div>
                     <button title="Close (Esc)" type="button" class="mfp-close">×</button>
